# pdg-manga-collage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
design/: ARCHITECTURE.md
src/app/: assets.cpp  assets.h  compositor.cpp  compositor.h  exporter.cpp  exporter.h  file_dialog.cpp  file_dialog.h  gl_loader.cpp  gl_loader.h  main.cpp  panel_editor.cpp  panel_editor.h  postfx.cpp  postfx.h  renderer.cpp  renderer.h
